WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195839
[iOS] Calling preventDefault() when handling a pointerdown event should not prevent panning, zooming or click event dispatch
https://bugs.webkit.org/show_bug.cgi?id=195839
Summary
[iOS] Calling preventDefault() when handling a pointerdown event should not p...
Antoine Quint
Reported
2019-03-15 17:47:36 PDT
Calling preventDefault() when handling a pointerdown event should not prevent a future click event for that user interaction.
Attachments
Patch
(11.32 KB, patch)
2019-04-24 08:39 PDT
,
Antoine Quint
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-15 17:47:52 PDT
<
rdar://problem/48946154
>
Antoine Quint
Comment 2
2019-04-24 08:39:22 PDT
Created
attachment 368127
[details]
Patch
Daniel Bates
Comment 3
2019-04-24 09:04:43 PDT
Title does not make sense. Description (
comment #0
) makes sense
Antoine Quint
Comment 4
2019-04-24 09:34:54 PDT
(In reply to Daniel Bates from
comment #3
)
> Title does not make sense. Description (
comment #0
) makes sense
Actually, it should be a mix of both :) I'll update the title.
Brent Fulgham
Comment 5
2019-04-24 10:24:41 PDT
The api-ios failure is because the bot needs a clean build (see Alan's e-mail): please delete /Debug-iphonesimulator/DerivedSources/WebKitLegacy/WebKitLegacy.generated.exp (or alternatively trigger a clean build).
Brent Fulgham
Comment 6
2019-04-24 10:34:27 PDT
Comment on
attachment 368127
[details]
Patch Great!
Antoine Quint
Comment 7
2019-04-24 11:00:35 PDT
Committed
r244598
: <
https://trac.webkit.org/changeset/244598
>
Daniel Bates
Comment 8
2019-04-24 13:24:03 PDT
(In reply to Brent Fulgham from
comment #5
)
> The api-ios failure is because the bot needs a clean build (see Alan's > e-mail): > > please delete > /Debug-iphonesimulator/DerivedSources/WebKitLegacy/WebKitLegacy.generated. > exp (or alternatively trigger a clean build).
Filed
bug #197241
for this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug